Trying to fix alignment in side bar.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -99,6 +99,7 @@ p {
     .container-block {
         padding: 10px;
         text-align: center;
+        width: 100%;
     }
     .container-block-title {
         text-transform: uppercase;
